src/components/Navigation/NavigationMenu.scss
.navigation-menu {
  top: 0;
  left: 0;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: $secondary;
  z-index: -1;
  opacity: 0;
  transition: opacity 0.3s ease-out;

  &.nav-open {
    opacity: 1;
    z-index: 5;
  }

  .container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: calc(#{$header-height} + 20px) 0px 20px;
    position: relative;

    .wrapper {
      flex: 1;
      max-width: 1040px;
      max-height: 600px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      position: relative;
      z-index: 2;

      .menu-row {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        &.nav-row {
          @include media-down(mobile) {
            flex: 1;
          }
        }

        @include media-down(mobile) {
          flex-direction: column;
          justify-content: flex-start;
        }

        .navigation {
          display: block;
          width: 100%;

          .nav-items {
            display: flex;
            flex-direction: row;
            justify-content: space-between;

            @include media-down(mobile) {
              flex-direction: column;
              justify-content: flex-start;
            }

            .nav-item {
              max-width: 250px;
              display: flex;
              flex-direction: column;
              margin-right: 50px;

              &:last-child {
                margin-right: 0;
              }

              .audience {
                @include h4($dark-font: false);
                margin-bottom: 30px;

                @include media-down(mobile) {
                  margin-bottom: 5px;
                }
              }
              .nav-link {
                display: block;
                @include h2($dark-font: false);
                margin-bottom: 30px;

                span {
                  position: relative;

                  &:after {
                    content: '';
                    position: absolute;
                    left: 0;
                    top: auto;
                    bottom: -5px;
                    width: 20%;
                    height: 3px;
                    background-color: $white;
                    border-radius: 2px;
                    transition: width 0.3s ease-out;

                    @include media-down(mobile) {
                      display: none;
                    }
                  }
                }

                &:hover {
                  span {
                    &:after {
                      width: 100%;
                      transition: width 0.3s ease-out;
                    }
                  }
                }
              }
              .description {
                @include p1($dark-font: false);

                @include media-down(mobile) {
                  display: none;
                }
              }
            }
          }
        }

        .row-item {
          display: flex;
          flex-direction: column;
          margin-bottom: 30px;

          &.social-links-item {
            @include media-down(mobile) {
              flex-direction: row;
              align-items: center;
              justify-content: space-between;
            }
          }

          .label {
            display: block;
            @include h4($dark-font: false);
            margin-bottom: 30px;

            @include media-down(mobile) {
              margin-bottom: 5px;
            }
          }

          .email {
            @include h3($dark-font: false);
          }

          .social-links {
            min-width: 250px;
            display: flex;
            flex-direction: row;

            @include media-down(mobile) {
              min-width: 0;
              padding: 0 10px;
            }

            li {
              margin-right: 30px;

              @include media-down(mobile) {
                margin-right: 20px;
              }

              &:last-child {
                margin-right: 0;
              }
            }
          }
        }
      }
    }

    .background-leaves {
      @include center-align(absolute);
      width: 90%;
      height: 90%;
      z-index: 1;

      svg {
        path {
          fill: $primary;
        }
      }
    }
  }
}

